2007-06-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* objectImplSwapI32toP32.c: 
	Fixed 1741435: cross-built repository corruption.	

	* Makefile.am: 
	Fixed 1715519: missing SLP headers

	* brokerUpc.c: 
	Fixed 1698462: upcall with empty parameter list crash.

2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>

    * fileRepository.c, objectImpl.c, providerMgr.c, queryLexer.l,
    queryStatement.c, support.c:
    Fixed 1741211 cleanup compiler warnings

2007-06-21  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c, internalProvider.c, providerMgr.c:
	Fixed 1734174: sfcb behaves different when assocclass & resultclass
	are unknown

2007-06-20  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.h, cimXmlGen.c, cimXmlRequest.c:
	Fixed 1730915 getInstance fails for associations

2007-06-08  Adrian Schuur

	* cimcClientSfcbLocal.c, providerDrv.c:
	Fixed: 1732774: random provider segfaults when using local client interface

2007-05-31  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1732080: sfcb ignores property filter in getInstance upcalls

2007-06-04  Tyrel Datwyler <tyreld@us.ibm.com>

    * classProvider.c
    Fixed 1730553: createClass fails in standard classProvider

2007-05-31  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimcClientSfcbLocal.c, providerMgr.c, brokerUpc.c,
	array.c, cimXmlParser.c:
	Fixed 1728904: problem with dateTime Values

2007-05-25  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1725608 default state of subscription state should be enabled

2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * classProvider.c objectImpl.c objectImpl.h
    Fixed 1724753: qualifier creation support for classes

2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * constClass.c
    Fixed 1724719: constClass leaks memory
    
2007-05-23  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLExport.c, fileRepository.c:
	Fixed 1724370: sfcb can run out of file handles

2007-05-11  Sven Schuetz <sven@de.ibm.com>
